--- a/package.json
+++ b/package.json
@@ -31,15 +31,13 @@
   "homepage": "https://github.com/echashin/hex-nestjs-crud#readme",
   "dependencies": {
     "@nestjs/common": "9.4.0",
-    "@nestjs/platform-express": "^9.4.0",
     "@nestjs/swagger": "6.3.0",
-    "change-case": "^4.1.2",
+    "change-case": "4.1.2",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "deepmerge": "4.3.1",
     "dot-object": "2.1.4",
-    "mime-types": "^2.1.35",
-    "multer": "^1.4.5-lts.1",
+    "mime-types": "2.1.35",
     "qs": "6.11.0",
     "typeorm": "0.3.14",
     "typescript": "4.4.4",
@@ -47,6 +45,6 @@
   },
   "devDependencies": {
     "@types/node": "18.11.9",
-    "@types/qs": "^6.9.7"
+    "@types/qs": "6.9.7"
   }
 }
